fix layout and alignment of project cards in main content section

--- a/styles.css
+++ b/styles.css
@@ -45,6 +45,7 @@ header {
     display: grid;
     grid-template-columns: 4fr 1fr;
     grid-template-rows: 1fr 1fr;
+    gap: 30px;
 }
 .projects {
     grid-column: 1 / 2;
@@ -96,4 +97,40 @@ header {
 .trending-icon {
     height: 40px;
     width: 40x;
+}
+h4 {
+    margin-left: 15px;
+    margin-bottom: 5px;
+}
+h5 {
+    margin: 0;
+}
+.card > div > p {
+    margin-top: 5px;
+}
+.project-cards {
+    margin-left: 15px;
+    display: grid;
+    grid-template-columns: repeat(2, min(400px, 50%));
+    grid-template-rows: repeat(3, max(250px, 30%));
+    gap: 20px;
+}
+.card {
+    border-radius: 5px;
+    background-color: whitesmoke;
+    display: flex;
+    flex-direction: column;
+    padding: 1.5rem;
+    justify-content: space-evenly;
+    box-shadow: -5px 0px 0px orange;
+}
+.card > div {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+.card > span {
+    display: flex;
+    justify-content: flex-end;
+    gap: 15px;
 }
